<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.Survey">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/user_survey"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/app_gradient_color_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="0dp"
            android:text="@string/title_survey"
            android:textColor="@color/colorWhite"
            android:textSize="28dp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_survey">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/questionsurvey1"
                android:layout_width="353dp"
                android:layout_height="211dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.example.cleanse.utils.FONTTextView2
                    android:id="@+id/Question1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ques1"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.472"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.188" />

                <com.example.cleanse.utils.FONTRadButton
                    android:id="@+id/rad1.1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/rad1.1" />

                <com.example.cleanse.utils.FONTRadButton
                    android:id="@+id/rad1.2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rad1.2" />

                <com.example.cleanse.utils.FONTRadButton
                    android:id="@+id/rad1.3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rad1.3" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/questionsurvey2"
                android:layout_width="353dp"
                android:layout_height="206dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/questionsurvey1">

                <com.example.cleanse.utils.FONTTextView2
                    android:id="@+id/Question2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ques2"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.472"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.188" />

                <com.example.cleanse.utils.FONTRadButton
                    android:id="@+id/rad2.1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/rad2.1" />

                <com.example.cleanse.utils.FONTRadButton
                    android:id="@+id/rad2.2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rad2.2" />

                <com.example.cleanse.utils.FONTRadButton
                    android:id="@+id/rad2.3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rad2.3" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/questionsurvey3"
                android:layout_width="352dp"
                android:layout_height="147dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/questionsurvey2">

                <com.example.cleanse.utils.FONTTextView2
                    android:id="@+id/Question3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ques3"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.472"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.188" />

                <com.example.cleanse.utils.FONTRadButton
                    android:id="@+id/rad3.1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/rad3.1" />

                <com.example.cleanse.utils.FONTRadButton
                    android:id="@+id/rad3.2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rad3.2" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/questionsurvey4"
                android:layout_width="350dp"
                android:layout_height="163dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/questionsurvey3">

                <com.example.cleanse.utils.FONTTextView2
                    android:id="@+id/Question4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ques4"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.472"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.188" />

                <com.example.cleanse.utils.FONTRadButton
                    android:id="@+id/rad4.1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/rad4.1" />

                <com.example.cleanse.utils.FONTRadButton
                    android:id="@+id/rad4.2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rad4.2" />

            </RadioGroup>

            <com.example.cleanse.utils.FONTButton
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_background"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_padding"
                android:paddingBottom="@dimen/btn_padding"
                android:text="@string/btn_submit"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_textSize"
                tools:layout_editor_absoluteX="23dp"
                tools:layout_editor_absoluteY="706dp"
                app:layout_constraintTop_toBottomOf="@id/questionsurvey4"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>